# SmolVLM2-2B-NPU

./: CMakeLists.txt  LICENSE  README-en.md  README.md
include/: RK35llm.h
models/: README.md
src/: RK35llm.cpp  main.cpp
